- SCIPisObjIntegral() now works correctly in SCIP_STAGE_PROBLEM
- ignore lower and upper bound tightenigs beyond +/-infinity during solving
- fix wrong NLP representation of logic or constraints in the dual value heuristic
- time limit of SCIP-infinity is converted to LPI-infinity when setting it
- fix LP activity of a row that has been modified

misc:
- dropped support for Ipopt < 3.11
- updated CppAD to 20160000

makefile:
- Building with SHARED=true automatically generates the combined library libscipsolver.so for easier linking
- All objective files are now placed in obj/static or obj/shared, depending on SHARED=false or SHARED=true, respectively.
- All internal and external libraries are placed in lib/static and lib/shared, the include files are in lib/include.
- External projects (including make.project) can use the makefile variable LINKCXXSCIPALL or LINKCCSCIPALL to link all SCIP libraries.
- Running "make help" lists all makefile options.
- All makefiles in examples/ and applications/ are updated.
- The binaries now contain an rpath to the SCIP directory, such that shared libraries are found.
- make.project contains the SCIP version as a define (SCIP_VERSION)
- revise sub-makefiles for MSVC on MinGW
- fix bug in 'dll' target
- make shared libraries aware of their dependencies
- link binary to shared libs when compiling with SHARED=true
- 'make install' copies now all header files


SCIP version 3.2.1
==================

features:
- new interactive shell command "write history" to write the command line history (only when compiled with Readline)
- several improvements of SCIP-Jack (STP application): extended presolving for STP variants, STP-specific branching
  rule, dual heuristic to generate initial LP relaxation
  SCIP-Jack is now competitive with problem specific state-of-the-art solvers on several well-known STP variants,
  e.g., the (rooted) prize-collecting Steiner tree problem.