@@ -206,6 +206,7 @@ fixed bugs:
 - fix wrong NLP representation of logic or constraints in the dual value heuristic
 - time limit of SCIP-infinity is converted to LPI-infinity when setting it
 - fix LP activity of a row that has been modified
+- fixed issue in reader_opb concerning writing of fixed variables contained in no constraints
 
 misc:
 - dropped support for Ipopt < 3.11
